--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,10 @@
 DATABRICKS_HOST=https://your-workspace.cloud.databricks.com
 DATABRICKS_TOKEN=your-databricks-token
 SERVING_ENDPOINT=your-serving-endpoint-name
-PROXY_PORT=8000 
+ANTHROPIC_PROXY_PORT=8000
+
+#Azure OpenAI Configuration
+AZURE_API_ENDPOINT = "https://xxx.openai.azure.com/openai/deployments/gpt-4o"
+AZURE_API_VERSION = "2025-01-01-preview"
+AZURE_API_KEY = "XXXXX"
+OPENAI_PROXY_PORT = 7777
