--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,12 @@
 DATABRICKS_HOST=https://your-workspace.cloud.databricks.com
 DATABRICKS_TOKEN=your-databricks-token
 SERVING_ENDPOINT=your-serving-endpoint-name
-ANTHROPIC_PROXY_PORT=8000
+PROXY_PORT=8000
+
+# Azure Configuration
+AZURE_TENANT_ID=your-tenant-id
+AZURE_CLIENT_ID=your-client-id
+AZURE_CLIENT_SECRET=your-client-secret
 
 #Azure OpenAI Configuration
 AZURE_API_ENDPOINT = "https://xxx.openai.azure.com/openai/deployments/gpt-4o"
