--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ readme = "README.md"
 python = "^3.8"
 requests = "^2.31.0"
 python-dotenv = "^1.0.0"
+msgraph-core = "^0.2.2"
+msgraph-sdk = "^1.0.0"
+azure-identity = "^1.15.0"
+pandas = "^2.1.0"
 
 [build-system]
 requires = ["poetry-core"]
