--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,14 @@ authors = ["Clay Hambrick <dclayh@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.9,<4.0"
 requests = "^2.31.0"
 python-dotenv = "^1.0.0"
-msgraph-core = "^0.2.2"
-msgraph-sdk = "^1.0.0"
+msgraph-core = "1.3.*"
+msgraph-sdk = "1.26.*"
 azure-identity = "^1.15.0"
 pandas = "^2.1.0"
 
 [build-system]
 requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api" 
+build-backend = "poetry.core.masonry.api"
